@@ -1,6 +1,10 @@
 Version 2.0.20 release (2014/10/30)
 -------------------------------------------
 
+Fix for incidents sanctions.
+
+Select class from Register menu.
+
 Display all the comments for a student, no only the last 2 academic
 years.
 
